...
            }
        })
        completionHandler?()
    }
    
    override func previewActionItems() -> [UIPreviewActionItem] {
        let editAction = UIPreviewAction(title: "Edit", style: .Default) { (action: UIPreviewAction, vc: UIViewController) -> Void in
            let detailVC = vc as! DetailViewController
            detailVC.editKittenCompletion?()
        }
        
        let deleteAction = UIPreviewAction(title: "Delete", style: .Destructive) { (action: UIPreviewAction, vc: UIViewController) -> Void in
            let detailVC = vc as! DetailViewController
            detailVC.deleteKittenCompletion?(self.kitten!)
        }
        self.previewActions = [editAction, deleteAction] // hacky test stuff
        return [editAction, deleteAction]
    }
...
