...
            deleteKittenWithWarning(self.kittens[indexPath.row])
            self.tableView.reloadData()
        } 
    }
    
    func deleteKittenWithWarning(kitten: Kitten) {
        let alertController = UIAlertController(title: "DANGER", message: "This action is permanent. The kitten will cease to exist. Are you certain you want to proceed?", preferredStyle: .Alert)
        
        let okAction = alertAction.init(title: "Yes. Delete the Kitten", style: .Destructive) {
            UIAlertAction in
            self.actionString = "Yes"
            kitten.ref?.removeValue()
        }
        
        let cancelAction = alertAction.init(title: "Cancel", style: .Cancel) {
            UIAlertAction in
            self.actionString = "Cancel"
            self.dismissViewControllerAnimated(true, completion: nil)
        }
        
        alertController.addAction(okAction)
...
